WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
86610
[EFL] Do not check NULL pointer allocated by new
https://bugs.webkit.org/show_bug.cgi?id=86610
Summary
[EFL] Do not check NULL pointer allocated by new
Grzegorz Czajkowski
Reported
2012-05-16 05:28:14 PDT
WebKit-Efl doesn't check pointers that are initialized by new. Those checks are not needed because new operator doesn't return NULL. Only an overloaded version of new returns NULL pointer.
Attachments
proposed patch
(3.06 KB, patch)
2012-05-16 06:20 PDT
,
Grzegorz Czajkowski
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Grzegorz Czajkowski
Comment 1
2012-05-16 06:20:53 PDT
Created
attachment 142239
[details]
proposed patch
Raphael Kubo da Costa (:rakuco)
Comment 2
2012-05-16 07:30:08 PDT
Comment on
attachment 142239
[details]
proposed patch Looks good.
Gyuyoung Kim
Comment 3
2012-05-16 17:37:34 PDT
Comment on
attachment 142239
[details]
proposed patch Looks good to me, thank you.
WebKit Review Bot
Comment 4
2012-05-17 01:21:08 PDT
Comment on
attachment 142239
[details]
proposed patch Clearing flags on attachment: 142239 Committed
r117414
: <
http://trac.webkit.org/changeset/117414
>
WebKit Review Bot
Comment 5
2012-05-17 01:21:13 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug