[EFL] Do not check NULL pointer allocated by new. https://bugs.webkit.org/show_bug.cgi?id=86610

Reviewed by Ryosuke Niwa.

WebKit-Efl doesn't check pointers that are initialized by new.
Those checks are not needed because new operator doesn't return NULL.
Only an overloaded version of new returns NULL pointer.

* ewk/ewk_tiled_matrix.cpp:
(ewk_tile_matrix_entry_new):
* ewk/ewk_view.cpp:
(_ewk_view_core_frame_new):


Canonical link: https://commits.webkit.org/104323@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@117414 268f45cc-cd09-0410-ab3c-d52691b4dbfc